--- a/BloggoFrontend/css/bookmark.css
+++ b/BloggoFrontend/css/bookmark.css
@@ -90,4 +90,10 @@ header {
     gap:8px;
     padding:10px 15px;
 }
-.dropdown-item:hover { background-color:#f8f9fa; }
+.dropdown-item:hover {
+    background-color:#f8f9fa;
+}
+body{
+    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+
+}
