--- a/BloggoFrontend/css/bookmark.css
+++ b/BloggoFrontend/css/bookmark.css
@@ -58,6 +58,15 @@ header {
     align-items:center;
     margin-left:16px;
 }
+.profile-avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background: #13293e;
+    object-fit: cover;
+    border: 3px solid #fff;
+    margin-top: -60px;
+}
 .avatar {
     width:36px;
     height:36px;
@@ -76,6 +85,32 @@ header {
     color: white;
     background:#2563EBFF;
 
+}
+#edit-profile-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #fff;
+    border-radius: 8px;
+    padding: 1.5rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 80px;
+}
+
+.profile-name {
+    font-weight: 700;
+    font-size: 1.6rem;
+
+}
+.profile-bio {
+    font-size: 0.95rem;
+    color: #555;
+}
+
+.edit-profile {
+    color: #28a745;
+    font-weight: 500;
+    text-decoration: none;
 }
 
 .dropdown-menu {
