--- a/BloggoFrontend/css/signing.css
+++ b/BloggoFrontend/css/signing.css
@@ -8,6 +8,18 @@
     --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
+.navbar-brand{
+    font-weight: 700;
+    font-size: 1.5rem;
+    color: #000000;
+    letter-spacing: 2px;
+    margin-right: 2rem;
+    user-select: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
