--- a/BloggoFrontend/css/signup.css
+++ b/BloggoFrontend/css/signup.css
@@ -35,6 +35,18 @@ body {
     }
 }
 
+.navbar-brand{
+    font-weight: 700;
+    font-size: 1.5rem;
+    color: #000000;
+    letter-spacing: 2px;
+    margin-right: 2rem;
+    user-select: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 /* Header */
 .header {
     position: fixed; /* FIXED instead of absolute */
