Updated navigation links to use relative paths in Bloggo frontend.

--- a/BloggoFrontend/css/stories.css
+++ b/BloggoFrontend/css/stories.css
@@ -226,7 +226,12 @@ a{
 .dropdown-item:hover {
     background-color: #f8f9fa;
 }
+
 .tab-pane{
     display: flex;
     align-items: flex-start;
+}
+
+#myStories{
+
 }
