--- a/BloggoFrontend/css/blog-editor.css
+++ b/BloggoFrontend/css/blog-editor.css
@@ -4,14 +4,14 @@
     --border: #e6e6e6;
     --text: #333;
     --text-light: #666;
-    --background: #fafafa;
+    --background: #FFFFFF;
     --white: #ffffff;
     --gray-light: #f9f9f9;
     --shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
 }
 
 body {
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background: #FFFFFF;
     color: var(--text);
 }
 
@@ -46,7 +46,7 @@ body {
 }
 
 .glass-navbar a:hover {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(79,70,229,0.05);
     transform: translateY(-2px);
 }
 
@@ -72,7 +72,7 @@ body {
 }
 
 .editor-container {
-    background: var(--white);
+    background: #f5fbff;
     border-radius: 12px;
     box-shadow: var(--shadow);
 }
@@ -153,9 +153,9 @@ body {
 }
 
 #btn-publish{
-    background: var(--primary);
+    background: black;
     color: var(--white);
-    border-color: var(--primary);
+
 }
 
 /* Dropdown menu */
@@ -174,7 +174,7 @@ body {
 }
 
 .dropdown-item:hover {
-    background-color: #f8f9fa;
+    background-color: #818cf8;
 }
 
 #coverPreview{
