--- a/BloggoFrontend/css/bookmark.css
+++ b/BloggoFrontend/css/bookmark.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background: white;
     font-family: 'Inter', sans-serif;
 }
 
@@ -17,7 +17,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #fff;
+    background: #f5fbff;
     border-radius: 8px;
     padding: 1.5rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -153,7 +153,7 @@ a{
 }
 
 .glass-navbar a:hover {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(79,70,229,0.05);
     transform: translateY(-2px);
 }
 
@@ -194,10 +194,14 @@ a{
 }
 
 .btn-primary:hover{
-    background:var(--primary-600)
+    background:black;
+    color: white;
+    border-color:black;
+    box-shadow:var(--shadow)
 }
 
 #notificationTabs{
+    background: #f5fbff;
     display: flex;
     justify-content: flex-start;
     margin-bottom: 1rem;
