--- a/BloggoFrontend/css/profile.css
+++ b/BloggoFrontend/css/profile.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background: #FFFFFF;
     font-family: 'Inter', sans-serif;
 }
 
@@ -145,7 +145,7 @@ body {
 }
 
 .glass-navbar a:hover {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(79,70,229,0.05);
     transform: translateY(-2px);
 }
 
