--- a/BloggoFrontend/css/stories.css
+++ b/BloggoFrontend/css/stories.css
@@ -7,7 +7,7 @@ html,body {
     padding:0;
     color:var(--text);
     font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background:#FFFFFF;
 
 }
 
@@ -57,7 +57,7 @@ a{
 }
 
 .glass-navbar a:hover {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(79,70,229,0.05);
     transform: translateY(-2px);
 }
 
