--- a/BloggoFrontend/css/story-details.css
+++ b/BloggoFrontend/css/story-details.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: var(--primary-gradient);
+    background: #FFFFFF;
     font-family: "Inter", sans-serif;
     color: #010205;
     min-height: 100vh;
@@ -72,7 +72,7 @@ body {
 }
 
 .glass-navbar a:hover {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(79,70,229,0.05);
     transform: translateY(-2px);
 }
 
